# DevOrbit

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_QUICK_REFERENCE.md  Makefile  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  SETUP.md  STAGE1_SUMMARY.md  STAGE2_SUMMARY.md  STAGE3_SUMMARY.md  STAGE4_SUMMARY.md  STAGE5_SUMMARY.md  STAGE6_SUMMARY.md  docker-compose.yml  docker-entrypoint.sh  start.sh  stop.sh
backend/: .env.example  Dockerfile  OAUTH_GUIDE.md  README.md  alembic.ini  init-db.sql  pyproject.toml  requirements.txt  run.sh  test_oauth.py  verify_setup.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_user_table.py  002_github_tables.py  __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: auth.py  github.py  health.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  github_event.py  github_repo.py  user.py
backend/app/schemas/: __init__.py  auth.py  github.py  user.py
backend/app/services/: github_sync.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  env.d.ts
frontend/src/api/: auth.ts  client.ts  github.ts
frontend/src/components/: Header.vue
frontend/src/components/charts/: GithubDailyChart.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  settings.ts
frontend/src/views/: Dashboard.vue  GithubCallback.vue  Login.vue  Settings.vue
